# exp

./: .gitignore  README.md
.github/workflows/: ci.yml
leak/: README.md  pyproject.toml
leak/src/leak/: events.py  service.py  terminal.py
leak/tests/: test_events.py  test_service.py
response/: README.md  adapter.go  core.go  format.go  go.mod  go.sum  handler.go  response_test.go
response/casual/: casual.go
response/joyful/: joyful.go
response/pro/: pro.go
response/witty/: witty.go
sensible/: README.md
sensible/go/: go.mod
sensible/go/chains/: chains.go  chains_test.go
sensible/go/strings/: strings.go  strings_test.go
sensible/go/types/: option.go  result.go  types_test.go
sensible/py/: README.md  pyproject.toml
sensible/py/src/sensible/: __init__.py  chains.py  decorators.py  strings.py  types.py
sensible/py/tests/: test_chains.py  test_chains_extended.py  test_decorators.py  test_decorators_extended.py  test_strings.py  test_strings_extended.py  test_types.py  test_types_extended.py
sheme/: README.md  adjust.go  assign.go  classify.go  extract.go  generator.go  go.mod  go.sum  neutralize.go  normalize.go  osc.go  pipeline.go  shell.go  sheme.go  test.go  test_test.go  theme.go  tone.go
