[project]
name = "leak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominionthedeveloper", email = "Dominionthedeveloper@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
