[project]
name = "sensible"
version = "0.1.0"
description = "A Library of simple and smart logics, types, functions, classes, chains(loops), and decorators for data modeling, workflows and development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensible"]
